# ###########################################
#
# Project
#
[project]
name = "cockpitdecks_ext"

authors = [
  { name="Pierre M.", email="pierre@devleaks.be" },
  { name="Duane Licudi", email="dlicudi@gmail.com" }
]

description = "Cockpitdecks physical decks"

readme = "README.md"

license = {file = "LICENCE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
]

requires-python = ">=3.10"

dependencies = [
   "pillow~=10.4.0",
   "ruamel.yaml~=0.18.6",
]

dynamic = [
    "version"
]

[project.urls]
Homepage = "https://devleaks.github.io/cockpitdecks-docs/"
Documentation = "https://devleaks.github.io/cockpitdecks-docs/"
Issues = "https://github.com/devleaks/cockpitdecks_ext/issues"
Source = "https://github.com/devleaks/cockpitdecks_ext"

# ###########################################
#
# Edit
#
[tool.ruff]
line-length = 160
docstring-code-format = true
select = [
    "E",
    "F",
    "W",
]
ignore = []

[tool.black]
line-length = 160

[tool.flake8]
max-line-length = 160

# ###########################################
#
# Build
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cockpitdecks_ext/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
